fix contrast color

--- a/styles/base.css
+++ b/styles/base.css
@@ -94,8 +94,8 @@ h3{
   }
 
 .card h2 {
-    background-color:rgb(43, 121, 177);
-    color: #FFFFFF;
+    background-color:#84BAE1;
+    color:black;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 15px;
